# NotNaN

./: .gitignore  CMakeLists.txt  CMakePresets.json  NotNaN.hpp  README.md  main.cpp
.github/workflows/: test.yaml
tests/: notnan_test.cpp
